# Qt-Examples

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.65b3385  CMakeLists.txt.user.e1089d0  Exemplos_pt_BR.ts  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  teladois.cpp  teladois.h  teladois.ui
